# photoshare-fastapi

./: .example.env  .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test.db
.github/workflows/: static.yml
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 14057e32129f_new_tabl.py  386af5fb453b_t_m2.py  38aaf09c56da_upd.py  ba6bf3572799_init.py  eabd5cef78d7_users_upgrade.py
src/: old_schemas.py  schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  images.py  ratings.py  tags.py  users.py
src/routes/: auth.py  comments.py  images.py  ratings.py  tags.py  users.py
src/schemas/: comments.py  images.py  ratings.py  schemas.py  tags.py  users.py
src/services/: auth.py  cloud_image.py  roles.py  tags.py
tests/: conftest.py  test.db  test_route_auth.py  test_route_main.py  test_route_user.py  test_unit_repository_comments.py  test_unit_repository_images.py  test_unit_repository_ratings.py  test_unit_repository_tags.py  test_unit_repository_users.py  test_unit_route_auth.py  test_unit_route_comments.py  test_unit_route_images.py  test_unit_route_ratings.py  test_unit_route_tags.py  test_unit_route_users.py  test_unit_services_tags.py
