[tool.poetry]
name = "photoshare-fastapi"
version = "0.1.0"
description = ""
authors = ["Андрій <andrey.maybrodskyy@gmail.com>"]
readme = "README.md"
packages = [{include = "photoshare_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
unicorn = {extras = ["standart"], version = "^2.0.1.post1"}
sqlalchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
