[tool.poetry]
name = "photoshare-fastapi"
version = "0.1.0"
description = ""
authors = ["Андрій <andrey.maybrodskyy@gmail.com>"]
readme = "README.md"
packages = [{include = "photoshare_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
alembic = "^1.10.4"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
cloudinary = "^1.32.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
qrcode = "^7.4.2"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
